# patchloom

./: .editorconfig  .gitignore  AGENTS.md  AST-IMPLEMENTATION-PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  GOVERNANCE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  Makefile  PATCHLOOM.md  PLAN-for-code-review-items.md  README.md  RELEASE_NOTES.md  REPO-SETUP.md  ROADMAP.md  SECURITY.md  SUPPORT.md  book.toml  deny.toml  dist-workspace.toml  glama.json  lychee.toml  release-please-config.json  server.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dco.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  discussion.yml  feature-request.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: auto-approve.yml  bench.yml  ci.yml  codeql.yml  dco.yml  dependabot-auto-merge.yml  dependency-review.yml  docs.yml  fossa.yml  issue-triage.yml  links.yml  pr-title.yml  publish-chocolatey.yml  publish-crates.yml  publish-mcp-registry.yml  publish-scoop.yml  publish-smithery.yml  release.yml  scorecard.yml  security.yml  stale.yml  test-scoop.yml  update-branches.yml
assets/: logo.ascii
benches/: README.md
benches/agent/: report.py
benches/agent/results/: grok-build_20260518_142405.json  grok-build_20260518_143318.json  grok-build_20260518_151541.json  sxs-claude-opus-4-6_20260518_144026.json  sxs-claude-opus-4-6_20260518_153234.json  sxs-claude-opus-4-6_20260521_123522.json  sxs-gpt-5-4_20260518_144659.json  sxs-gpt-5-4_20260518_152754.json  sxs-gpt-5-4_20260521_115845.json
benches/ci/: bench_compare.py  bench_summary.py  check_threshold.py
benches/cli/: check-threshold.py  generate_corpus.py  run.sh
benches/mcp/: run.sh
chocolatey/: patchloom.nuspec
chocolatey/tools/: chocolateyInstall.ps1
demo/: demo.tape  setup.sh
docs/: SUMMARY.md  introduction.md
docs/blog/: launch-announcement.md
docs/getting-started/: concepts.md  editor-extension.md  installation.md  mcp-setup.md  quickstart.md
docs/plans/: 792-library-embedding.md  811-815-bline-followups.md  821-cli-mcp-search-parity.md  text-io-honesty.md  write-pipeline.md
docs/reference/: README.md
examples/: 01-basic-replace.json  02-multi-file-batch.json  03-markdown-editing.json  04-doc-mutations.json  05-strict-mode.json  06-batch-version-bump.txt  07-yaml-plan.yaml  08-mcp-tool-call.json  09-patch-apply.json  10-inspect-and-edit.json  11-ast-operations.sh  12-command-position.json  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ast_parse.rs  fuzz_batch_tokenize.rs  fuzz_containment_check.rs  fuzz_doc_parse.rs  fuzz_fallback_resolve.rs  fuzz_md_heading.rs  fuzz_patch_apply.rs  fuzz_patch_parse.rs  fuzz_replace_regex.rs  fuzz_selector_eval.rs  fuzz_selector_parse.rs
mcpb/: README.md  manifest.json  package.json
mcpb/server/: run.mjs
scripts/: embedder-smoke.sh  fossa-filter.py  pack-mcpb.sh  publish-smithery.sh  test_fossa_filter.py  test_pack_mcpb.py  test_update_chocolatey_package.py  test_update_scoop_manifest.py  update-chocolatey-package.py  update-scoop-manifest.py
src/: agent_rules.md  api.rs  backup.rs  config.rs  containment.rs  containment_tests.rs  diff.rs  error.rs  exec.rs  exit.rs  fallback.rs  files.rs  json_emit.rs  lib.rs  main.rs  ops.rs  output.rs  plan.rs  schema.rs  schema_tests.rs  tx.rs  write.rs  write_tests.rs
src/api/: ast_write.rs  content_edits.rs  doc.rs  file.rs  md.rs  mod.rs  patch.rs  plan.rs  post_write.rs  read.rs  replace.rs  search.rs  tests.rs  tidy.rs
src/ast/: deps.rs  diff.rs  extract.rs  extract_to_file.rs  group.rs  impact.rs  imports.rs  insert.rs  map.rs  mod.rs  move_symbols.rs  refs.rs  rename.rs  reorder.rs  replace.rs  rewrite.rs  search.rs  split.rs  symbol_extract.rs  symbols.rs  validate.rs  wrap.rs
src/ast/symbols/: mod.rs  tests.rs
src/cli/: global.rs  mod.rs
src/cmd/: agent_rules.rs  append.rs  ast.rs  batch.rs  batch_tests.rs  create.rs  delete.rs  doc.rs  doc_tests.rs  explain.rs  hygiene.rs  init.rs  mcp.rs  md.rs  md_tests.rs  mod.rs  output.rs  patch.rs  prepend.rs  read.rs  rename.rs  replace.rs  replace_tests.rs  schema.rs  search.rs  status.rs  tidy.rs  tx.rs  tx_tests.rs  undo.rs  write_dispatch.rs  write_mode.rs
src/cmd/ast/: common.rs  mod.rs  mutate.rs  query.rs
src/cmd/explain/: describe.rs  mod.rs
src/cmd/mcp/: ast_tools.rs  handlers.rs  mod.rs  params.rs  registry.rs  surface.rs  tests.rs  transport.rs  validation.rs
src/cmd/tidy/: check.rs  fix.rs  mod.rs  tests.rs
src/ops/: doc.rs  file.rs  md.rs  md_tests.rs  mod.rs  patch.rs  patch_tests.rs  read.rs  replace.rs  replace_tests.rs  search.rs  shell_token.rs
src/ops/doc/: mod.rs  navigate.rs  preserve.rs  query.rs  tests.rs  toml_preserve.rs  yaml_cst.rs  yaml_splice.rs
src/plan/: mod.rs  operation.rs  tests.rs
src/selector/: eval.rs  mod.rs  parser.rs
src/tx/: ast_op.rs  context.rs  engine.rs  execute.rs  lifecycle.rs  md_op.rs  mod.rs  output.rs  patch_op.rs  replace_op.rs  search_op.rs  tidy_op.rs  validate.rs  verify.rs
src/tx/execute/: file_ops.rs  mod.rs  policy.rs  tests.rs
src/tx/lifecycle/: commit.rs  mod.rs  plan_exec.rs  steps.rs
tests/: bench_mcp.rs  integration.rs  pty.rs
tests/agent/: README.md  conftest.py  requirements.txt  shim.sh  test_basic.py  test_batch.py  test_bench.py  test_files.py  test_structured.py
tests/agent/drivers/: __init__.py  aider.py  base.py  claude.py  cline.py  codex.py  grok.py
tests/integration/: agent_rules_tests.rs  ast_tests.rs  batch_tests.rs  cli_flags_tests.rs  create_tests.rs  delete_tests.rs  doc_tests.rs  explain_tests.rs  file_ops_tests.rs  init_tests.rs  main.rs  mcp_tests.rs  mcp_tool_tests.rs  md_tests.rs  misc_tests.rs  module_hygiene_tests.rs  parse_tests.rs  patch_tests.rs  platform_path_tests.rs  read_tests.rs  reference_docs_tests.rs  rename_tests.rs  replace_tests.rs  schema_tests.rs  search_tests.rs  smoke_tests.rs  status_tests.rs  tidy_tests.rs  tx_tests.rs  undo_tests.rs  write_path_contract_tests.rs
